[gd_scene load_steps=7 format=3 uid="uid://dfhobfh8uprdt"]

[ext_resource type="Script" path="res://scripts/ball.gd" id="1_r3ko1"]
[ext_resource type="Texture2D" uid="uid://bheb0f50a6sv0" path="res://resources/sprites/Ball.png" id="1_tq00w"]
[ext_resource type="Resource" uid="uid://b7smecu0q4ijm" path="res://resources/tresource/movement_stats.tres" id="2_d6ghn"]
[ext_resource type="Script" path="res://scripts/MoveComponent.gd" id="2_j3sn6"]
[ext_resource type="Script" path="res://scripts/BounceBallComponent.gd" id="4_21hmy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q6h3h"]
radius = 11.0454

[node name="Ball" type="Node2D"]
script = ExtResource("1_r3ko1")
move_stats = ExtResource("2_d6ghn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_tq00w")

[node name="BallCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallCollision"]
shape = SubResource("CircleShape2D_q6h3h")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_j3sn6")
actor = NodePath("..")

[node name="BounceBallComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_21hmy")
actor = NodePath("..")
